--- a/ps4test.css
+++ b/ps4test.css
@@ -36,12 +36,12 @@ do so via my Imraising page: https://imraising.tv/u/mrmcpowned
     and you can observe it as an example. The sticks, buttons, and directional arrows are missing
     because their appropriate elements will be incorperated when their styling is defined below.
     The entirity of the skin's visual styling is done via background images and CSS sprites. */ 
-    background: url(https://i.imgur.com/DVvJZKr.png); 
-    height: 558px;
-    width: 784px;
+    background: url(https://i.imgur.com/9CT05VG.png);
+    height: 599px;
+    width: 806px;;
 }
 .custom.disconnected { /* This class shows an image when the controller is disconnected */
-    background: url(https://i.imgur.com/x5w6tz4.png);
+    background: url(https://i.imgur.com/oxHsG8U.png);
 }
 /* This hides the controller's button when disconnected so only the background image remains */ 
 .custom.disconnected div {
